--- a/src/app/cart/shopping-cart.component.html
+++ b/src/app/cart/shopping-cart.component.html
@@ -8,7 +8,7 @@
       
          <div class="right-container">
                
-               <select  (change)="orderfun($event)">
+               <select class="select-dropdown"  (change)="orderfun($event)">
                  <option>Sort Product name</option>
                   <option value="asc">Asc</option>
                   <option value="desc">Desc</option>
