--- a/src/app/cart/shopping-cart-item.component.css
+++ b/src/app/cart/shopping-cart-item.component.css
@@ -73,3 +73,17 @@
       width: 200px;
       height: 200px;
   }
+
+
+  @media only screen and (max-width: 767px) {
+    .image-css{
+      width: 350px;
+      height: 350px;
+    }
+    .card {
+      max-width: 350px;
+      
+     
+    }
+
+}  
