--- a/src/app/cart/shopping-cart-item.component.css
+++ b/src/app/cart/shopping-cart-item.component.css
@@ -59,12 +59,13 @@
       text-align: center;
       padding: 5px;
       margin: 5px;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      text-overflow: ellipsis;
       height: 30px;
       overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical !important;
+    
   }
   .btn-p{
     margin-bottom: 0px;
