--- a/src/app/cart/shopping-cart.component.css
+++ b/src/app/cart/shopping-cart.component.css
@@ -52,4 +52,10 @@ input[type=text] {
        
 
       }
+      .no-match{
+        position: relative;
+        top: 10px;
+        left: 10px;
+        color: red;
+    }
   }  
